Attempt to fix demo-gif translation bug on mobile clients

--- a/landing_page/styles-v2.css
+++ b/landing_page/styles-v2.css
@@ -133,6 +133,7 @@ h1 {
   }
 
   #demo-gif {
-    transform: translateX(62px) translateY(-288px);
+    /* transform: translateX(62px) translateY(-288px); */
+    transform: translateX(-458px) translateY(17px);
   }
 }
